Merged PR 230: feat(data-service): import kpt complex geometry & multithreading
Related work items: #1227